--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, user-scalable=no,
-    initial-scale=1/>
-    <meta content="ie=edge" http-equiv="X-UA-Compatible" />
-    <title>Around The U.S</title>
-    <link href="./pages/index.css" rel="stylesheet" />
+    <meta name="viewport" content="width=device-width, initial-scale=1 />
+    <title>Around the U.S</title>
+    <meta name="autor" content="Luis Baez" />
+    <link rel="stylesheet" href="pages/index.css" />
   </head>
   <body class="page">
     <div class="page__content">
@@ -34,42 +33,62 @@
         <section class="cards page__section">
           <ul class="cards__list">
             <li class="card">
-              <img src="./images/yosemite.jpg" class="card__image" />
+              <img
+                src="./images/yosemite.jpg"
+                alt="Yosemite"
+                class="card__image"
+              />
               <div class="card__description">
                 <h2 class="card__title">Yosemite Valley</h2>
                 <button class="card__like-button" type="button"></button>
               </div>
             </li>
             <li class="card">
-              <img src="./images/lake-louise.jpg" class="card__image" />
+              <img
+                src="./images/lake-louise.jpg"
+                alt="Lake Louise"
+                class="card__image"
+              />
               <div class="card__description">
                 <h2 class="card__title">Lake Louise</h2>
                 <button class="card__like-button" type="button"></button>
               </div>
             </li>
             <li class="card">
-              <img src="./images/bald-mountains.jpg" class="card__image" />
+              <img
+                src="./images/bald-mountains.jpg"
+                alt="Bald Mountains"
+                class="card__image"
+              />
               <div class="card__description">
                 <h2 class="card__title">Bald Mountains</h2>
                 <button class="card__like-button" type="button"></button>
               </div>
             </li>
             <li class="card">
-              <img src="./images/latemar.jpg" class="card__image" />
+              <img
+                src="./images/latemar.jpg"
+                alt="Laterman"
+                class="card__image"
+              />
               <div class="card__description">
                 <h2 class="card__title">Latemar</h2>
                 <button class="card__like-button" type="button"></button>
               </div>
             </li>
             <li class="card">
-              <img src="./images/vanoise.jpg" class="card__image" />
+              <img
+                src="./images/vanoise.jpg"
+                alt="Vanoise"
+                class="card__image"
+              />
               <div class="card__description">
                 <h2 class="card__title">Vanoise National Park</h2>
                 <button class="card__like-button" type="button"></button>
               </div>
             </li>
             <li class="card">
-              <img src="./images/lago.jpg" class="card__image" />
+              <img src="./images/lago.jpg" alt="Lago" class="card__image" />
               <div class="card__description">
                 <h2 class="card__title">Lago di Braies</h2>
                 <button class="card__like-button" type="button"></button>
