--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1 />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Around the U.S</title>
-    <meta name="autor" content="Luis Baez" />
+    <meta name="author" content="Luis Baez" />
     <link rel="stylesheet" href="pages/index.css" />
   </head>
   <body class="page">
